# Tech-Intel

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
app/: __init__.py
app/agents/: __init__.py
app/agents/classifier/: __init__.py
app/agents/collector/: __init__.py  agent.py
app/agents/collector/rss/: __init__.py  client.py  parser.py
app/agents/email/: __init__.py
app/agents/extractor/: __init__.py  agent.py  cleaner.py  content.py  downloader.py
app/agents/insight/: __init__.py
app/agents/ranker/: __init__.py
app/agents/report/: __init__.py
app/agents/scheduler/: __init__.py
app/agents/summarizer/: __init__.py
app/core/: __init__.py
app/core/config/: __init__.py  loader.py  settings.py  sources.yaml
app/core/database/: __init__.py  base.py  session.py
app/core/models/: __init__.py  analysis.py  article.py  enums.py  report.py  source.py
app/core/repositories/: __init__.py  analysis_repository.py  article_repository.py  base.py  source_repository.py
app/core/services/: __init__.py  bootstrap.py  collection.py  diagnostics.py  extraction.py
app/utils/: __init__.py  hashing.py  logging.py  retry.py
docs/: SPEC.md
tests/: conftest.py
tests/unit/: test_collection_utils.py  test_collector.py  test_database.py  test_extractor.py
